--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#about">About</a></li>
             <li><a class="dropdown-item" href="#machinelearning">Machine Learning</a></li>
-             <li><a class="dropdown-item" href="#visualizations">Visualizations</a></li>
+             <li><a class="dropdown-item" href="#visual">Visualizations</a></li>
             <li><a class="dropdown-item" href="#conclusion">Conclusion</a></li>
              <li><a class="dropdown-item" href="#our-team">Meet The Team</a></li>
 
@@ -316,6 +316,7 @@
       </div>
       <div class="modal-body">
         Logistic Regression's roots came from the biological sciences. 
+        <iframe src="./assets/static/Confusion_matrix_.html" width='500px' height='500px' title="SVM Confusion Matrix"></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -423,7 +424,7 @@
               <!-- Here -->
             </div>
         </section>
-        <section class="container px-4" id="conclusion">
+        <section class="container px-4" id="visual">
             <div class="container px-4">
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
@@ -664,7 +665,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            My name is Dylan Garcia, and AI camp was my first experience with python. My prior programing knowledge includes HTML, C++, and Javascript. Now, I can add python to that list. I live in San Diego California, and I will be attending San Marcos High for my freshman year on August 16th, 2022. My entire life, I have been interested in mechanical engineering. As long as I can remember, I've wanted to attend M.I.T and work for N.A.S.A and design/build rockets. After this past year, I'm discovering that I have an interest in 
+                            My name is Dylan Garcia, and AI camp was my first experience with python. My prior programing knowledge includes HTML, C++, and Javascript. Now, I can add python to that list. I live in San Diego California, and I will be attending San Marcos High for my freshman year on August 16th, 2022. My entire life, I have been interested in mechanical engineering. As long as I can remember, I've wanted to attend M.I.T and work for N.A.S.A and design/build rockets. After this past year, I'm discovering that I have an interest in computer science
                         </p>
                     </div>
                     <div class="modal-footer">
