--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">XGBoost</h5>
+                <h5 class="card-title">Bagging</h5>
                 <p class="card-text">XGBoost is a gradient boosting algorithm that uses decision trees as its “weak” predictors. <br></p>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#xgboost"> Learn
                   More</button>
@@ -315,8 +315,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Logistic Regression's roots came from the biological sciences. 
-        <iframe src="./assets/static/Confusion_matrix_.html" width='500px' height='500px' title="SVM Confusion Matrix"></iframe>
+        Logistic Regression is one of most utilized by the 
+        <iframe src="./assets/static/Confusion_matrix_Logistic_Regression.html" width='500px' height='500px' title="Logistic Regression Confusion Matrix"></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -665,7 +665,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            My name is Dylan Garcia, and AI camp was my first experience with python. My prior programing knowledge includes HTML, C++, and Javascript. Now, I can add python to that list. I live in San Diego California, and I will be attending San Marcos High for my freshman year on August 16th, 2022. My entire life, I have been interested in mechanical engineering. As long as I can remember, I've wanted to attend M.I.T and work for N.A.S.A and design/build rockets. After this past year, I'm discovering that I have an interest in computer science
+                            My name is Dylan Garcia, and AI camp was my first experience with python. My prior programing knowledge includes HTML, C++, and Javascript. Now, I can add python to that list. I live in San Diego California, and I will be attending San Marcos High for my freshman year on August 16th, 2022. My entire life, I have been interested in mechanical engineering. As long as I can remember, I've wanted to attend M.I.T and work for N.A.S.A and design/build rockets. After this past year, I'm discovering that I have an interest in computer science. AI camp allowed me to meet new people, and learn more about myself.
                         </p>
                     </div>
                     <div class="modal-footer">
