--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Bagging</h5>
-                <p class="card-text">XGBoost is a gradient boosting algorithm that uses decision trees as its “weak” predictors. <br></p>
+                <p class="card-text">Bagging, also known as bootstrap aggregation, is the ensemble learning method that is commonly used to reduce variance within a noisy dataset. In bagging, a random sample of data in a training set is selected with replacement—meaning that the individual data points can be chosen more than once.<br></p>
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#xgboost"> Learn
                   More</button>
               </div>
@@ -234,11 +234,11 @@
            <li>Adapts easily.
 </li>
            <li>High accuracy when working with good data.</li>
-           <li>Power and flexibility from kernels.
+           <li>Simple and easy to understand algorithm.
 </li>
-           <li>Works very well with a clear margin of separation.
+           <li>Used for nonlinear data.
 </li>
-           <li>Many applications.
+           <li>Can be used for both classification (grouping) and regression (predicting numeric values).
 </li>
         </ul>
            <br> <br>
@@ -251,10 +251,8 @@
              <li>Doesn’t perform so well, when the data comes with more noise i.e. target classes are overlapping.
 </li>
         </ul>
+        <iframe src="./assets/static/Confusion_matrix_K_Nearest_Neighbors.html" width='500px' height='500px' title="SVM Confusion Matrix"></iframe>
       </div>
-        <iframe src = "Green-Titans-Product/Stroke_Data_Website/startbootstrap-scrolling-nav-gh-pages/assets/static/Confusion_matrix_K_Nearest_Neighbors.html">
-          
-      </iframe>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
@@ -328,11 +326,11 @@
   <div class="modal-dialog modal-xl">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">XGBoost</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Bagging</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        XGBoost Body
+       Bagging Body
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -411,6 +409,9 @@
 <br>
 <p3><strong>How It Works</strong> 💻🌿</p3>
 <p4>&nbsp; &nbsp;A neural network is a method in artificial intelligence that teaches computers to process data in a way that is inspired by the human brain. It is a type of machine learning process, called deep learning, that uses interconnected nodes or neurons in a layered structure that resembles the human brain. (https://aws.amazon.com/what-is/neural-network/) </p4>
+<br>
+<br>
+<p5><strong>Pros</strong> ✅😁</p5>
         
 
       </div>
@@ -616,7 +617,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">About Team Member 1</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">About Jeremy Xiang</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -638,7 +639,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">About Team Member 4</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">About Dami Alabi</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -678,7 +679,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">About Team Member 6</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">About Sofia Behzadi</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
