--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img src="https://cdn.shawnengmann.com/shawn/vfbkKP.png" class="card-img-top" alt="..." />
+                            <img src="https://cdn.shawnengmann.com/shawn/vfbkKP.png" class="card-img-top " alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Jeongwoo Cheong</h5>
                                 <p class="card-text">Hello, I'm Jeongwoo Cheon if you would like to read more about me click the button below...</p>
@@ -514,7 +514,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img src="https://cdn.shawnengmann.com/shawn/vfbkKP.png" class="card-img-top" alt="..." />
+                            <img src="dylanpfp.jpg" class="card-img-top circle" alt="..." />
                             <div class="card-body">
                                 <h5 class="card-title">Dylan Garcia</h5>
                                 <p class="card-text">
