--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img src="dylanpfp.jpg" class="card-img-top circle" alt="..." />
+                            <img src="dylanpfp.jpg" class="card-img-top circle" width="200" height="200"/>
                             <div class="card-body">
                                 <h5 class="card-title">Dylan Garcia</h5>
                                 <p class="card-text">
