--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@
                 <div class="team">
                     <div class="row cards align-items-center text-center">
                         <div class="card" style="width: 18rem;">
-                            <img src="https://cdn.shawnengmann.com/shawn/YLGBEk.jpg" class="card-img-top" alt="" />
+                            <img src="https://cdn.shawnengmann.com/shawn/YLGBEk.jpg" class="card-img-top circle" width="200" 
+     height="200" />
                             <div class="card-body">
                                 <h5 class="card-title">Shawn Engmann</h5>
                                 <p class="card-text">Hello, I'm Shawn if you would like to read more about me click the button below...</p>
