--- a/index.html
+++ b/index.html
@@ -705,8 +705,8 @@
         </div>
         <div id="threed" class="text-center" style="display: none;">
           <div class="text-center">
-            <h1> Multi Dimensional Plot</h1>
-            <iframe src="assets/static/md.html" width='900px' height='550px'
+            <h1><strong> Multi Dimensional Plot</strong></h1>
+            <iframe src="assets/static/md.html" width='1000px' height='550px'
               style="align-items: center; text-align: center; margin: auto; " title="Pie Chart"></iframe>
             <br />
             <br />
