--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                          <div class="row cards align-items-center text-center">
                               <div class="card team" style="width: 18rem;">
                                    <img
-                                        src="https://cocalc1.ai-camp.dev/65cfa0f0-7e13-4335-a821-03f129071bce/raw/Green-Titans-Product/Stroke_Data_Website/startbootstrap-scrolling-nav-gh-pages/Dami_Profile_Pic.png"
+                                        src="/Dami_Profile_Pic.png"
                                         alt="Dami_Profile_Picture"
                                         class="card-img-top circle"
                                         width="200"
