--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
                               <div class="card team" style="width: 18rem;">
                                    <img
                                         src="/Dami_Profile_Pic.png"
-                                        alt="Dami_Profile_Picture"
+                                        alt=""
                                         class="card-img-top circle"
                                         width="200"
                                         height="300"
