--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                               </div>
                               <br />
                               <p class="lead">
-                                   <tab1> However, what if we were to inform you that <b>80%</b> of strokes are <b>preven </b>? That's right, you can reduce your own risk of a stroke if you catch it early enough.</tab1> <br />
+                                   <tab1> However, what if we were to inform you that <b>80%</b> of strokes are <b>preventable </b>? That's right, you can reduce your own risk of a stroke if you catch it early enough.</tab1> <br />
                                    <tab1>
                                         Well, how can you do this? After all, for the vast majority of us it is simply impractical to go to the doctor every time we begin to worry about our chances of getting a stroke, and Google doesn't
                                         always give accurate information.
@@ -915,7 +915,7 @@
 
                          <div class="modal-body">
                               <p>
-                                   Hello, I'm Shawn Engmann and I live on Long Island, New York. I am 14 years old and run a mini for my enjoyment. I know many programming languages; they are listed below. I also know how to speak
+                                   Hello, I'm Shawn Engmann and I live on Long Island, New York. I am 14 years old and run a mini business for my enjoyment. I know many programming languages; they are listed below. I also know how to speak
                                    <strong>French</strong> a little bit. I have worked on many projects throughout my time coding. I started my coding journey with a class by
                                    <a href="https://www.codewizardshq.com/" class="link_link">Code Wizards </a>. I have taken a few courses including <strong>Intro To Programming With Python</strong>,
                                    <strong>Webpages with HTML & CSS</strong>, <strong>Interactive Web With Javascript</strong>, <strong>Capstone I Virtual Reality Game</strong>, <strong>User Interface Development</strong>. Throughout this
