--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      </head>
      <body id="page-top">
           <!-- Navigation-->
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+          <nav class="navbar navbar-expand-lg navbar- dark bg-dark fixed-top" id="mainNav">
                <div class="container px-4">
                     <a class="navbar-brand" href="#page-top">Stroke Prediction</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,7 +88,7 @@
                </div>
           </section>
                     <section class="container" id="visual">
-               <div class="container">
+               <div class="container bg-light">
                     <div class="row justify-content-center">
                          <div class="col-sm-3 text-center">
                               <h2>Visualizations</h2>
@@ -149,7 +149,7 @@
                     <div id="pieChart" class="text-center" style="display: none;">
                          <div class="text-center">
                               <h1>Pie Chart</h1>
-                              <iframe src="assets/static/pie.html" width="900px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
+                              <iframe src="assets/static/pie.html" width="1000px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
                               <br />
                               <br />
 
@@ -159,7 +159,7 @@
                     <div id="histogram" class="text-center" style="display: none;">
                          <div class="text-center">
                               <h1>Histogram</h1>
-                              <iframe src="assets/static/smokeh.html" width="800px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
+                              <iframe src="assets/static/smokeh.html" width="900px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
                               <br />
                               <br />
 
@@ -169,7 +169,7 @@
                     <div id="histogram" class="text-center" style="display: none;">
                          <div class="text-center">
                               <h1>Histogram</h1>
-                              <iframe src="assets/static/smokeh.html" width="800px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
+                              <iframe src="assets/static/smokeh.html" width="900px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
                               <br />
                               <br />
 
@@ -179,7 +179,7 @@
                     <div id="scatMatrix" class="text-center" style="display: none;">
                          <div class="text-center">
                               <h1>Scatter Matrix</h1>
-                              <iframe src="assets/static/smatrix.html" width="800px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Scatter Matrix"></iframe>
+                              <iframe src="assets/static/smatrix.html" width="900px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Scatter Matrix"></iframe>
                               <br />
                               <br />
 
@@ -193,7 +193,7 @@
                     <div id="threed" class="text-center" style="display: none;">
                          <div class="text-center">
                               <h1><strong> Multi Dimensional Plot</strong></h1>
-                              <iframe src="assets/static/md.html" width="1000px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
+                              <iframe src="assets/static/md.html" width="1100px" height="550px" style="align-items: center; text-align: center; margin: auto;" title="Pie Chart"></iframe>
                               <br />
                               <br />
 
