--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           </section>
 
           <!-- Machine Learning section-->
-          <section id="machinelearning" class="bg-light px-4">
+          <section id="machinelearning" class="px-4">
                <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                          <h2>Machine Learning and Models</h2>
@@ -773,7 +773,7 @@
 
 
           <!-- Conclusion section-->
-          <section class="bg-light" id="conclusion">
+          <section  id="conclusion">
                <div class="container px-4">
                     <div class="row gx-4 justify-content-center">
                          <div class="col-lg-8">
@@ -794,7 +794,7 @@
 
           <!-- Conclusion -->
 
-          <section id="our-team">
+          <section id="our-team" class="bg-light">
                <div class="container px-4">
                     <p class="header">
                          Meet The Team
