--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     </div>
                </div>
           </section>
-                    <section class="container" id="visual">
-               <div class="container bg-light">
+                    <section class="bg-light" id="visual">
+               <div class="container ">
                     <div class="row justify-content-center">
                          <div class="col-sm-3 text-center">
                               <h2>Visualizations</h2>
