--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
 
 
           <!-- Conclusion section-->
-          <section  id="conclusion">
+          <section  id="conclusion" class="bg-light">
                <div class="container px-4">
                     <div class="row gx-4 justify-content-center">
                          <div class="col-lg-8">
@@ -795,7 +795,7 @@
 
           <!-- Conclusion -->
 
-          <section id="our-team" class="bg-light">
+          <section id="our-team">
                <div class="container px-4">
                     <p class="header">
                          Meet The Team
